# mcat

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
Formula/: mcat.rb
docs/: index.html  style.css
man/: mcat.1
src/mcat/: __init__.py  __main__.py  cat_core.py  compression.py  detect.py  diff.py  main.py  pager.py  query.py  stats.py  structured.py
tests/: conftest.py  create_fixtures.py  test_all_formats.py  test_cat_core.py  test_cli.py  test_compression.py  test_detect.py  test_diff.py  test_grep.py  test_progress.py  test_query.py  test_sample.py  test_sort.py  test_structured.py
tests/fixtures/: sample.avro  sample.csv  sample.json  sample.jsonl  sample.parquet  sample.tsv  sample.txt  sample.xlsx
